// This is the public API offered by your entity.
syntax = "proto3";

import "common_api.proto";
import "common_domain.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

package app.improving.ordercontext.order;

enum ApiOrderStatus {
    API_ORDER_STATUS_DRAFT = 0;
    API_ORDER_STATUS_PENDING = 1;
    API_ORDER_STATUS_INPROCESS = 2;
    API_ORDER_STATUS_READY = 3;
    API_ORDER_STATUS_DELIVERED = 4;
    API_ORDER_STATUS_CANCELLED = 5;
    API_ORDER_STATUS_UNKNOWN = 6;
}

message ApiOrder {
    string order_id = 1 [(kalix.field).entity_key = true];
    ApiOrderInfo info = 2;
    ApiOrderMetaInfo meta = 3;
    ApiOrderStatus status = 4;
}

message ApiLineItem {
    ApiProductId product = 1;
    int32     quantity = 2;
    double    line_total = 3;
}

message ApiOrderInfo {
    ApiOrderId order_id = 1 [(kalix.field).entity_key = true];
    repeated ApiLineItem lineItems = 2;
    string specialInstructions = 3;
}

message ApiOrderMetaInfo  {
    ApiOrderId order_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId member_id = 2;
    ApiStoreId store_id = 3;
    google.protobuf.Timestamp created_on = 4;
    ApiMemberId last_modified_by = 5;
    google.protobuf.Timestamp last_modified_on = 6;
    ApiOrderStatus status = 7;
}

message ApiOrderInfoUpdate {
        repeated ApiLineItem lineItems = 2;
        optional string specialInstructions = 3;
}
message ApiCreateOrder {
    string order_id = 1 [(kalix.field).entity_key = true];
    ApiOrderInfo info = 2;
    ApiMemberId creating_member = 3;
    ApiStoreId store_id = 4;
}

message ApiUpdateOrderStatus {
    string order_id = 1 [(kalix.field).entity_key = true];
    ApiOrderStatus new_status = 2;
    ApiMemberId updating_member = 3;
}
message ApiUpdateOrderInfo {
    string order_id = 1 [(kalix.field).entity_key = true];
    ApiOrderInfoUpdate update = 2;
    ApiMemberId updating_member = 3;
}
message ApiCancelOrder {
    string order_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId cancelling_member = 2;
}
message ApiGetOrderInfo {
    string order_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId requesting_member = 2;
}
message ApiOrderInfoResult {
    ApiOrderId order_id = 1;
    ApiOrderInfo info = 2;
}
message ApiDeleteOrder {
    ApiOrderId order_id = 1;
}